# rover-dashboard

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  run.txt  vite.config.js
.github/workflows/: publish.yml
cam_min/: CMakeLists.txt  README.md  package.xml
cam_min/resource/: cam_min
cam_min/src/: camera_publisher.cpp
includes/: CameraPublisherNode.cpp  sixdof.urdf.xacro
includes/ros2/: README.md
includes/ros2/install/: local_setup.sh  setup.sh
includes/ros2/install/test_topic_pkg/lib/test_topic_pkg/: test_node
includes/ros2/install/test_topic_pkg/share/test_topic_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
includes/ros2/log/: latest_build
includes/ros2/test_topic_pkg/: setup.cfg  setup.py
includes/ros2/test_topic_pkg/test_topic_pkg/: test_node.py
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ping.rs
src/components/: About.vue  ConnectionForm.vue  MapViewer.vue  NetworkDisplay.vue  RvizSlamViewer.vue  RvizViewer.vue  StreamController.vue  VideoStreamCard.vue
src/composables/: useJoystick.js  useRos.js
src/router/: index.js  router.js
src/stores/: store.js
src/views/: CamView.vue  ConnectionView.vue  DebugView.vue  JoystickView.vue  MainView.vue  ScienceView.vue  SlamView.vue  TerminalView.vue
